--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,12 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+
+:root {
+    --ion-color-primary: #1e3a8a;
+    --ion-color-secondary: #9333ea;
+    --ion-color-tertiary: #f59e0b;
+  
+    --ion-color-light: #f9fafb;
+    --ion-color-dark: #111827;
+  }
+  
