--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,23 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
+    <ion-title>📺 TV Shows</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+<ion-content class="ion-padding">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" *ngFor="let s of shows()">
+        <ion-card [routerLink]="['/details', m.id]">
+          <img [src]="s.image?.medium || 'https://via.placeholder.com/210x295?text=No+Image'" alt="Poster">
+          <ion-card-header>
+            <ion-card-title>{{ s.name }}</ion-card-title>
+            <ion-card-subtitle>
+              {{ s.premiered || 'N/A' }} • {{ s.genres?.join(', ') }}
+            </ion-card-subtitle>
+          </ion-card-header>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
