--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,8 +7,8 @@
 <ion-content class="ion-padding">
   <ion-grid>
     <ion-row>
-      <ion-col size="6" *ngFor="let s of shows()">
-        <ion-card [routerLink]="['/details', m.id]">
+      <ion-col size="6" *ngFor="let s of tvShows">
+        <ion-card [routerLink]="['/details', s.id]">
           <img [src]="s.image?.medium || 'https://via.placeholder.com/210x295?text=No+Image'" alt="Poster">
           <ion-card-header>
             <ion-card-title>{{ s.name }}</ion-card-title>
